--- a/index.html
+++ b/index.html
@@ -4,144 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Müzik Çalar</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js" defer></script>
-    <script src="script.js" defer></script>
+    <link rel="shortcut icon" href="music.png" />
 </head>
-<body class="bg-gray-900 text-white">
-    <aside class="bg-gray-800 p-4 flex flex-col">
-        <h1 class="text-xl font-bold mb-4 flex items-center gap-2">
-            <i class="fa fa-music"></i> Müzikler
-        </h1>
-        <span id="songCountDesktop" class="text-gray-400">0 Şarkı</span>
-        <div id="musicListDesktop" class="mt-4 flex-1 overflow-y-auto"></div>
+<body class="bg-gray-100">
+
+    <aside class="w-64 md:w-72 lg:w-80 bg-gradient-to-br from-gray-900 to-slate-800 text-white p-5 flex flex-col shadow-lg">
+        <h2 class="text-2xl font-bold border-b border-gray-700 pb-3 mb-4 flex items-center gap-3">
+            <i class="fa fa-music text-indigo-400"></i> Müzikler
+            <span id="songCountDesktop" class="text-base font-medium text-gray-400 ml-auto">0 Şarkı</span>
+        </h2>
+        <div id="musicListDesktop" class="flex-grow overflow-y-auto space-y-3 pr-2">
+            </div>
     </aside>
 
-    <main class="p-6 flex flex-col items-center relative">
-        <div class="top-buttons-mobile flex gap-2 mb-4 md:hidden">
-            <button id="mobileMenuBtn" class="bg-indigo-600 p-2 rounded" aria-label="Müzik Listesini Aç">
-                <i class="fa fa-bars"></i>
-            </button>
-            <button id="searchButton" class="bg-indigo-600 p-2 rounded" aria-label="Müzik Ara">
-                <i class="fa fa-search"></i>
-            </button>
-        </div>
+    <main class="flex-1 bg-gradient-to-br from-gray-100 to-gray-200 flex flex-col items-center justify-center p-5 md:p-10 relative overflow-y-auto">
 
-        <button id="adminButton" class="bg-indigo-600 p-2 rounded absolute top-5 right-5 hidden md:flex items-center gap-2" aria-label="Admin Panelini Aç">
-            <i class="fa fa-user-shield"></i> Admin
+        <button id="adminButton" class="bg-slate-800 hover:bg-indigo-700 text-white font-semibold py-2 px-4 rounded-lg shadow-md transition-all flex items-center justify-center z-10">
+            <i class="fa fa-lock"></i>
         </button>
 
-        <section id="player" class="text-center">
-            <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" class="rounded-lg mb-6 mx-auto">
-            <h2 id="currentSongTitle" class="text-xl font-semibold mb-4">Müzik Seçin</h2>
-            <audio id="audioPlayer" preload="metadata"></audio>
-            <div class="custom-player-controls flex flex-col items-center gap-4">
-                <div class="flex gap-4">
-                    <button id="prevBtn" class="text-gray-600 hover:text-gray-900 disabled:opacity-40" aria-label="Önceki Şarkı">
-                        <i class="fa fa-backward fa-lg"></i>
-                    </button>
-                    <button id="playPauseBtn" class="text-gray-600 hover:text-gray-900" aria-label="Oynat/Duraklat">
-                        <i class="fa fa-play fa-lg"></i>
-                    </button>
-                    <button id="nextBtn" class="text-gray-600 hover:text-gray-900 disabled:opacity-40" aria-label="Sonraki Şarkı">
-                        <i class="fa fa-forward fa-lg"></i>
-                    </button>
-                </div>
-                <div class="w-full flex items-center gap-2">
-                    <span id="currentTime" class="text-sm">0:00</span>
-                    <input type="range" id="seekBar" min="0" max="100" value="0" class="seek-bar flex-1" aria-label="Şarkı İlerlemesi">
-                    <span id="totalDuration" class="text-sm">0:00</span>
-                </div>
-                <div class="flex items-center gap-2 w-32">
-                    <i id="volumeIcon" class="fa fa-volume-high text-gray-600 hover:text-gray-900 cursor-pointer w-5 text-center" aria-label="Ses Kontrolü"></i>
-                    <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="volume-bar" aria-label="Ses Seviyesi">
-                </div>
-            </div>
-        </section>
+        <button id="mobileMenuButton" class="menu-button-mobile fixed top-4 left-4 bg-slate-800 hover:bg-indigo-700 text-white p-3 rounded-full shadow-lg z-20 md:hidden">
+            <i class="fa fa-bars fa-lg"></i>
+        </button>
 
-        <section id="upcoming" class="mt-6 w-full max-w-2xl">
-            <h3 class="text-lg font-semibold mb-2">Yaklaşan Şarkılar</h3>
-            <div class="relative">
-                <button id="scrollLeftUpcoming" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-gray-700 p-2 rounded-full" aria-label="Sola Kaydır">
-                    <i class="fa fa-chevron-left"></i>
-                </button>
-                <div id="upcomingSongsContainer" class="flex gap-4 overflow-x-auto pb-4 snap-x snap-mandatory"></div>
-                <button id="scrollRightUpcoming" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-gray-700 p-2 rounded-full" aria-label="Sağa Kaydır">
-                    <i class="fa fa-chevron-right"></i>
-                </button>
+        <div id="player" class="text-center flex flex-col items-center w-full px-4">
+            <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="300" height="300" class="rounded-xl shadow-xl mb-6 object-cover border-4 border-white"/>
+            <h3 id="currentSongTitle" class="text-xl font-semibold text-gray-800 mb-4 truncate w-full px-4">Müzik Seçin</h3>
+
+            <audio id="audioPlayer"></audio>
+
+            <div class="custom-player-controls">
+                <div class="flex items-center gap-3 mb-3">
+                    <span id="currentTime" class="text-xs font-medium text-gray-600 w-10 text-left tabular-nums">0:00</span>
+                    <input type="range" id="seekBar" value="0" class="flex-grow seek-bar">
+                    <span id="totalDuration" class="text-xs font-medium text-gray-600 w-10 text-right tabular-nums">0:00</span>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <div class="w-1/4 flex justify-start"></div>
+                    <div class="flex items-center justify-center gap-4 flex-grow">
+                        <button id="prevBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Önceki Şarkı" disabled>
+                            <i class="fa fa-backward-step fa-lg"></i>
+                        </button>
+                        <button id="playPauseBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white rounded-full w-12 h-12 flex items-center justify-center text-xl shadow-md transition-all transform hover:scale-105">
+                            <i class="fa fa-play fa-lg"></i>
+                        </button>
+                         <button id="nextBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Sonraki Şarkı" disabled>
+                            <i class="fa fa-forward-step fa-lg"></i>
+                        </button>
+                    </div>
+
+                    <div class="flex items-center justify-end gap-2 w-1/4">
+                        <i id="volumeIcon" class="fa fa-volume-high text-gray-600 hover:text-gray-900 cursor-pointer w-5 text-center"></i>
+                        <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="w-20 h-1.5 bg-gray-300 rounded-full appearance-none cursor-pointer volume-bar accent-indigo-500">
+                    </div>
+                </div>
             </div>
-        </section>
+        </div>
     </main>
 
-    <div id="mobileMusicListModal" class="fixed inset-0 bg-black bg-opacity-70 hidden" role="dialog" aria-label="Mobil Müzik Listesi">
-        <div id="mobileMusicListContent" class="bg-gray-800 p-4 rounded-lg w-11/12 max-w-md">
-            <h2 class="text-xl font-bold mb-4 flex items-center gap-2">
-                <i class="fa fa-music"></i> Müzikler
-            </h2>
-            <div id="musicListMobile" class="max-h-96 overflow-y-auto"></div>
-            <button id="closeMobileListBtn" class="mt-4 bg-red-600 p-2 rounded w-full" aria-label="Listeyi Kapat">
-                <i class="fa fa-times"></i> Kapat
-            </button>
-        </div>
-    </div>
-
-    <div id="searchOverlay" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center" role="dialog" aria-label="Müzik Arama">
-        <div class="bg-gray-800 p-4 rounded-lg w-11/12 max-w-md">
-            <input id="searchInput" type="text" placeholder="Müzik ara..." class="w-full p-2 mb-4 rounded bg-gray-700 text-white" aria-label="Arama Kutusu">
-            <div id="searchResults" class="max-h-96 overflow-y-auto"></div>
-            <button id="closeSearchBtn" class="mt-4 bg-red-600 p-2 rounded w-full" aria-label="Aramayı Kapat">
-                <i class="fa fa-times"></i> Kapat
-            </button>
-        </div>
-    </div>
-
-    <div id="adminPanel" class="fixed inset-0 bg-black bg-opacity-70 hidden items-center justify-center" role="dialog" aria-label="Admin Paneli">
-        <div class="bg-gray-800 p-6 rounded-lg w-11/12 max-w-md">
-            <button id="closeAdminPanelBtn" class="absolute top-2 right-2 text-gray-400 hover:text-white" aria-label="Admin Panelini Kapat">
+    <div id="mobileMusicListModal">
+        <div id="mobileMusicListContent">
+            <button id="closeMobileListBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
                 <i class="fa fa-times"></i>
             </button>
-            <h2 class="text-xl font-bold mb-4">Admin Paneli</h2>
-            <div id="loginForm" class="flex flex-col gap-4">
-                <p>Giriş Yapın</p>
-                <input id="authEmail" type="email" placeholder="Email" class="p-2 rounded bg-gray-700" aria-label="Email">
-                <input id="authPass" type="password" placeholder="Şifre" class="p-2 rounded bg-gray-700" aria-label="Şifre">
-                <button id="signInBtn" class="bg-indigo-600 p-2 rounded flex items-center justify-center gap-2" aria-label="Giriş Yap">
-                    <i class="fa fa-sign-in-alt"></i> Giriş Yap
+             <h2><i class="fa fa-music text-indigo-400"></i> Müzikler</h2>
+             <div id="musicListMobile" class="space-y-3 pr-2">
+                 </div>
+        </div>
+    </div>
+
+    <div id="adminPanel" class="fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm text-white flex items-center justify-center z-50 hidden p-5">
+        <div class="bg-slate-800 p-6 md:p-8 rounded-xl shadow-2xl w-full max-w-md relative">
+            <button id="closeAdminPanelBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+                <i class="fa fa-times"></i>
+            </button>
+
+            <h2 class="text-2xl font-semibold mb-6 text-center flex items-center justify-center gap-3"><i class="fa fa-user-shield text-indigo-400"></i> Admin Paneli</h2>
+
+             <div id="loginForm" class="flex flex-col items-center space-y-4">
+                 <p class="text-gray-400 text-center">Giriş Yapın</p>
+                 <input type="email" id="authEmail" placeholder="Email" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <input type="password" id="authPass" placeholder="Şifre" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <button id="signInBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                     <i class="fa fa-sign-in-alt"></i> Giriş Yap
+                 </button>
+             </div>
+
+            <div id="adminControls" class="hidden flex-col space-y-4">
+                <p id="loggedInUserEmail" class="text-gray-300 text-center font-medium"></p>
+                <button id="signOutBtn" class="w-max mx-auto bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg transition-all flex items-center justify-center gap-2 text-sm">
+                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
+                 </button>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Ekle</h3>
+                <input type="text" id="musicName" placeholder="Müzik Adı" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+
+                <label class="block text-sm font-medium text-gray-300">Müzik Dosyası (MP3, WAV...):</label>
+                <input type="file" id="musicFile" accept="audio/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <label class="block text-sm font-medium text-gray-300">Kapak Resmi (İsteğe Bağlı):</label>
+                <input type="file" id="musicImage" accept="image/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <button id="addMusicBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-plus"></i> Müziği Ekle
                 </button>
-            </div>
-            <div id="adminControls" class="hidden flex-col gap-4">
-                <span id="loggedInUserEmail" class="text-gray-400"></span>
-                <button id="signOutBtn" class="bg-red-600 p-2 rounded flex items-center justify-center gap-2" aria-label="Çıkış Yap">
-                    <i class="fa fa-sign-out-alt"></i> Çıkış Yap
-                </button>
-                <div>
-                    <h3 class="font-semibold mb-2">Müzik Ekle</h3>
-                    <input id="musicName" type="text" placeholder="Müzik Adı" class="w-full p-2 mb-2 rounded bg-gray-700" aria-label="Müzik Adı">
-                    <input id="musicFile" type="file" accept="audio/*" class="w-full mb-2" aria-label="Müzik Dosyası">
-                    <input id="musicImage" type="file" accept="image/*" class="w-full mb-2" aria-label="Kapak Resmi">
-                    <div id="uploadProgress" class="hidden w-full bg-gray-700 rounded h-2 mb-2">
-                        <div class="bg-indigo-600 h-full rounded" style="width: 0%"></div>
-                    </div>
-                    <button id="addMusicBtn" class="bg-green-600 p-2 rounded w-full flex items-center justify-center gap-2" aria-label="Müzik Ekle">
-                        <i class="fa fa-plus"></i> Müziği Ekle
-                    </button>
-                </div>
-                <div>
-                    <h3 class="font-semibold mb-2">Müzik Sil</h3>
-                    <select id="deleteSelect" class="w-full p-2 mb-2 rounded bg-gray-700" aria-label="Silinecek Müzik">
-                        <option value="" disabled selected>Silmek için seçin...</option>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Sil</h3>
+                <label for="deleteSelect" class="block text-sm font-medium text-gray-300">Silinecek Müziği Seç:</label>
+                <select id="deleteSelect" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white">
+                    <option value="" disabled selected>Silmek için seçin...</option>
                     </select>
-                    <button id="deleteMusicBtn" class="bg-red-600 p-2 rounded w-full flex items-center justify-center gap-2" aria-label="Müzik Sil">
-                        <i class="fa fa-trash"></i> Seçilen Müziği Sil
-                    </button>
-                </div>
+                <button id="deleteMusicBtn" class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-trash"></i> Seçilen Müziği Sil
+                </button>
             </div>
         </div>
     </div>
 
-    <div id="loadingOverlay" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center" aria-hidden="true">
-        <i class="fa fa-spinner fa-spin text-4xl text-white"></i>
-    </div>
+    <script src="script.js"></script>
+
 </body>
 </html>
