--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.supabase.co/supabase-js/2.45.4/dist/umd/supabase.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
