--- a/index.html
+++ b/index.html
@@ -4,127 +4,166 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Müzik Çalar</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="music.png" />
 </head>
-<body class="bg-gray-900 text-white">
-    <!-- Mobile Top Bar -->
-    <div class="top-buttons-mobile flex justify-between items-center p-4 md:hidden bg-gray-800">
-        <button class="menu-button-mobile text-white text-2xl"><i class="fa fa-bars"></i></button>
-        <span id="songCountMobile" class="text-gray-400">0 Şarkı</span>
-    </div>
+<body class="bg-gray-100">
 
-    <!-- Sidebar (Desktop) -->
-    <aside class="bg-gray-800 w-72 p-6 flex flex-col hidden md:flex">
-        <h2 class="text-2xl font-bold mb-4 flex items-center gap-3">
-            <i class="fa fa-music"></i> Müzikler
+    <aside class="w-64 md:w-72 bg-gradient-to-br from-gray-900 to-slate-800 text-white p-5 flex flex-col shadow-lg">
+        <h2 class="text-2xl font-bold border-b border-gray-700 pb-3 mb-4 flex items-center gap-3">
+            <i class="fa fa-music text-indigo-400"></i> Müzikler
         </h2>
-        <div class="relative w-full mb-2">
-            <input type="text" id="searchBarDesktop" placeholder="Müzik ara..." class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-            <button id="clearSearchDesktop" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-white hidden">
-                <i class="fa fa-times"></i>
-            </button>
-        </div>
-        <select id="searchTypeDesktop" class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500 mb-4">
-            <option value="name">Şarkı Adına Göre</option>
-            <option value="duration">Süreye Göre (dakika)</option>
-            <option value="date">Eklenme Tarihine Göre</option>
-        </select>
-        <div id="musicListDesktop" class="space-y-2 flex-grow"></div>
-        <span id="songCountDesktop" class="text-gray-400 mt-4">0 Şarkı</span>
+        <nav class="space-y-2 mb-6">
+            <a href="#" class="nav-link flex items-center gap-3 p-3 rounded-lg hover:bg-gray-700 transition-colors active-link">
+                <i class="fa fa-home"></i> Ana Sayfa
+            </a>
+            <a href="#" class="nav-link flex items-center gap-3 p-3 rounded-lg hover:bg-gray-700 transition-colors" id="openMobileMusicListBtn">
+                <i class="fa fa-search"></i> Ara
+            </a>
+            <a href="#" class="nav-link flex items-center gap-3 p-3 rounded-lg hover:bg-gray-700 transition-colors">
+                <i class="fa fa-list-ul"></i> Çalma listeleri
+            </a>
+        </nav>
+
+        <div class="flex-grow overflow-y-auto space-y-3 pr-2" id="musicListDesktop">
+            </div>
     </aside>
 
-    <!-- Main Content -->
-    <main class="flex flex-col items-center justify-center p-6">
-        <button id="adminButton" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg flex items-center gap-2">
-            <i class="fa fa-user-shield"></i> Admin Paneli
-        </button>
-        <div id="player" class="flex flex-col items-center">
-            <div class="relative w-64 h-64 md:w-80 md:h-80">
-                <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Kapak Resmi" class="w-full h-full rounded-lg object-cover shadow-lg">
-                <svg class="absolute inset-0 w-full h-full" viewBox="0 0 100 100">
-                    <circle cx="50" cy="50" r="48" fill="none" stroke="#4f46e5" stroke-width="4" stroke-dasharray="301.6" stroke-dashoffset="301.6" id="progressRing"></circle>
-                </svg>
+    <main class="flex-1 bg-gradient-to-br from-gray-100 to-gray-200 flex flex-col p-5 md:p-10 relative overflow-y-auto">
+
+        <header class="w-full flex items-center justify-between p-4 bg-white bg-opacity-90 backdrop-blur-md rounded-xl shadow-md mb-6 sticky top-0 z-10">
+            <div class="flex items-center gap-4">
+                <h1 class="text-xl font-bold text-gray-800">Müzik</h1>
+                <button id="adminButtonHeader" class="bg-slate-800 hover:bg-indigo-700 text-white font-semibold p-2 rounded-full shadow-md transition-all flex items-center justify-center">
+                    <i class="fa fa-lock"></i>
+                </button>
             </div>
-            <h2 id="currentSongTitle" class="text-2xl font-bold mt-4">Müzik Seçin</h2>
-            <div class="custom-player-controls flex items-center gap-4">
-                <button id="prevBtn" class="text-gray-400 hover:text-white disabled:opacity-40" disabled><i class="fa fa-backward fa-lg"></i></button>
-                <button id="playPauseBtn" class="text-gray-400 hover:text-white"><i class="fa fa-play fa-lg"></i></button>
-                <button id="nextBtn" class="text-gray-400 hover:text-white disabled:opacity-40" disabled><i class="fa fa-forward fa-lg"></i></button>
-                <span id="currentTime" class="text-sm">0:00</span>
-                <input type="range" id="seekBar" class="seek-bar" min="0" max="100" value="0" disabled>
-                <span id="totalDuration" class="text-sm">0:00</span>
-                <i id="volumeIcon" class="fa fa-volume-high text-gray-600 hover:text-gray-900 cursor-pointer w-5 text-center"></i>
-                <input type="range" id="volumeBar" class="volume-bar" min="0" max="1" step="0.01" value="1">
+            <span id="headerGreeting" class="text-lg font-medium text-gray-700 hidden md:block">Merhaba!</span>
+            <div class="relative">
+                <input type="text" id="searchBar" placeholder="Ara..." class="py-2 pl-10 pr-4 rounded-full bg-gray-100 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 text-gray-800">
+                <i class="fa fa-search absolute left-3 top-1/2 -translate-y-1/2 text-gray-400"></i>
             </div>
+        </header>
+
+        <div id="player" class="text-center flex flex-col items-center w-full px-4 mb-8">
+            <img id="coverImage" src="https://placehold.co/300x300/e2e8f0/94a3b8?text=Müzik+Seçin" alt="Albüm Kapağı" width="300" height="300" class="rounded-xl shadow-xl mb-6 object-cover border-4 border-white"/>
+            <h3 id="currentSongTitle" class="text-xl font-semibold text-gray-800 mb-4 truncate w-full px-4">Müzik Seçin</h3>
+
             <audio id="audioPlayer"></audio>
+
+            <div class="custom-player-controls">
+                <div class="flex items-center gap-3 mb-3">
+                    <span id="currentTime" class="text-xs font-medium text-gray-600 w-10 text-left tabular-nums">0:00</span>
+                    <input type="range" id="seekBar" value="0" class="flex-grow seek-bar">
+                    <span id="totalDuration" class="text-xs font-medium text-gray-600 w-10 text-right tabular-nums">0:00</span>
+                </div>
+
+                <div class="flex items-center justify-between">
+                    <div class="w-1/4 flex justify-start"></div>
+                    <div class="flex items-center justify-center gap-4 flex-grow">
+                        <button id="prevBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Önceki Şarkı" disabled>
+                            <i class="fa fa-backward-step fa-lg"></i>
+                        </button>
+                        <button id="playPauseBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white rounded-full w-12 h-12 flex items-center justify-center text-xl shadow-md transition-all transform hover:scale-105">
+                            <i class="fa fa-play fa-lg"></i>
+                        </button>
+                         <button id="nextBtn" class="text-gray-600 hover:text-gray-900 transition-colors w-8 h-8" aria-label="Sonraki Şarkı" disabled>
+                            <i class="fa fa-forward-step fa-lg"></i>
+                        </button>
+                    </div>
+
+                    <div class="flex items-center justify-end gap-2 w-1/4">
+                        <i id="volumeIcon" class="fa fa-volume-high text-gray-600 hover:text-gray-900 cursor-pointer w-5 text-center"></i>
+                        <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1" class="w-20 h-1.5 bg-gray-300 rounded-full appearance-none cursor-pointer volume-bar accent-indigo-500">
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <section class="w-full mb-8">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Senin için Hazırlandı</h2>
+            <div id="preparedForYouGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
+                </div>
+        </section>
+
+        <section class="w-full">
+            <h2 class="text-2xl font-bold text-gray-800 mb-4">Yaklaşan Şarkılar</h2>
+            <div id="upcomingSongsGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
+                </div>
+        </section>
+
     </main>
 
-    <!-- Mobile Music List Modal -->
-    <div id="mobileMusicListModal" class="hidden">
-        <div id="mobileMusicListContent" class="relative">
-            <h2 class="flex items-center gap-3">
-                <i class="fa fa-music"></i> Müzikler
-                <button id="closeMobileListBtn" class="ml-auto text-gray-400 hover:text-white"><i class="fa fa-times"></i></button>
-            </h2>
-            <div class="relative w-full mb-2">
-                <input type="text" id="searchBarMobile" placeholder="Müzik ara..." class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <button id="clearSearchMobile" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-400 hover:text-white hidden">
-                    <i class="fa fa-times"></i>
-                </button>
-            </div>
-            <select id="searchTypeMobile" class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500 mb-4">
-                <option value="name">Şarkı Adına Göre</option>
-                <option value="duration">Süreye Göre (dakika)</option>
-                <option value="date">Eklenme Tarihine Göre</option>
-            </select>
-            <div id="musicListMobile" class="space-y-2"></div>
+    <div id="mobileMusicListModal">
+        <div id="mobileMusicListContent">
+            <button id="closeMobileListBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+                <i class="fa fa-times"></i>
+            </button>
+             <h2><i class="fa fa-music text-indigo-400"></i> Müzikler</h2>
+             <div id="musicListMobile" class="space-y-3 pr-2">
+                 </div>
         </div>
     </div>
 
-    <!-- Admin Panel Modal -->
-    <div id="adminPanel" class="hidden fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-[1000]">
-        <div class="bg-gray-800 p-6 rounded-lg w-full max-w-md">
-            <button id="closeAdminPanelBtn" class="float-right text-gray-400 hover:text-white"><i class="fa fa-times"></i></button>
-            <h2 class="text-2xl font-bold mb-4">Admin Paneli</h2>
-            <div id="loginForm" class="flex flex-col space-y-4">
-                <span id="loggedInUserEmail" class="text-gray-400"></span>
-                <input id="authEmail" type="email" placeholder="Email" class="p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <input id="authPass" type="password" placeholder="Şifre" class="p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                <button id="signInBtn" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg flex items-center gap-2">
-                    <i class="fa fa-sign-in-alt"></i> Giriş Yap
-                </button>
-            </div>
+    <div id="adminPanel" class="fixed inset-0 bg-black bg-opacity-80 backdrop-blur-sm text-white flex items-center justify-center z-50 hidden p-5">
+        <div class="bg-slate-800 p-6 md:p-8 rounded-xl shadow-2xl w-full max-w-md relative">
+            <button id="closeAdminPanelBtn" class="absolute top-3 right-3 text-gray-400 hover:text-white text-2xl transition-colors">
+                <i class="fa fa-times"></i>
+            </button>
+
+            <h2 class="text-2xl font-semibold mb-6 text-center flex items-center justify-center gap-3"><i class="fa fa-user-shield text-indigo-400"></i> Admin Paneli</h2>
+
+             <div id="loginForm" class="flex flex-col items-center space-y-4">
+                 <p class="text-gray-400 text-center">Giriş Yapın</p>
+                 <input type="email" id="authEmail" placeholder="Email" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <input type="password" id="authPass" placeholder="Şifre" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+                 <button id="signInBtn" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                     <i class="fa fa-sign-in-alt"></i> Giriş Yap
+                 </button>
+                 </div>
+
             <div id="adminControls" class="hidden flex-col space-y-4">
-                <span id="loggedInUserEmail" class="text-gray-400"></span>
-                <button id="signOutBtn" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg flex items-center gap-2">
-                    <i class="fa fa-sign-out-alt"></i> Çıkış Yap
+                <p id="loggedInUserEmail" class="text-gray-300 text-center font-medium"></p>
+                <button id="signOutBtn" class="w-max mx-auto bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg transition-all flex items-center justify-center gap-2 text-sm">
+                     <i class="fa fa-sign-out-alt"></i> Çıkış Yap
+                 </button>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Ekle</h3>
+                <input type="text" id="musicName" placeholder="Müzik Adı" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white placeholder-gray-400">
+
+                <label class="block text-sm font-medium text-gray-300">Müzik Dosyası (MP3, WAV...):</label>
+                <input type="file" id="musicFile" accept="audio/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <label class="block text-sm font-medium text-gray-300">Kapak Resmi (İsteğe Bağlı):</label>
+                <input type="file" id="musicImage" accept="image/*" class="w-full text-sm text-gray-400 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-indigo-100 file:text-indigo-700 hover:file:bg-indigo-200 cursor-pointer">
+
+                <button id="addMusicBtn" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-plus"></i> Müziği Ekle
                 </button>
-                <div>
-                    <h3 class="text-lg font-semibold">Müzik Ekle</h3>
-                    <input id="musicName" type="text" placeholder="Müzik Adı" class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                    <input id="musicFile" type="file" accept="audio/*" class="w-full p-2 bg-gray-700 rounded-lg text-white">
-                    <input id="musicImage" type="file" accept="image/*" class="w-full p-2 bg-gray-700 rounded-lg text-white">
-                    <button id="addMusicBtn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg flex items-center gap-2 mt-2">
-                        <i class="fa fa-plus"></i> Müziği Ekle
-                    </button>
-                </div>
-                <div>
-                    <h3 class="text-lg font-semibold">Müzik Sil</h3>
-                    <select id="deleteSelect" class="w-full p-2 bg-gray-700 rounded-lg text-white focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                        <option value="" disabled selected>Silmek için seçin...</option>
-                    </select>
-                    <button id="deleteMusicBtn" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg flex items-center gap-2 mt-2">
-                        <i class="fa fa-trash"></i> Seçilen Müziği Sil
-                    </button>
-                </div>
+
+                <hr class="border-gray-600 my-4">
+
+                <h3 class="text-xl font-semibold text-gray-200 border-b border-gray-700 pb-2">Müzik Sil</h3>
+                <label for="deleteSelect" class="block text-sm font-medium text-gray-300">Silinecek Müziği Seç:</label>
+                <select id="deleteSelect" class="w-full p-3 bg-gray-700 border border-gray-600 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 text-white">
+                    <option value="" disabled selected>Silmek için seçin...</option>
+                </select>
+                <button id="deleteMusicBtn" class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-4 rounded-lg transition-all flex items-center justify-center gap-2">
+                    <i class="fa fa-trash"></i> Seçilen Müziği Sil
+                </button>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <script src="script.js"></script>
+
 </body>
 </html>
